# particle_simulation

./: .gitignore  .ignore  Cargo.toml  README.md  example.csv  frame_buffer_to_video.sh  justfile
gallery/: README.md
src/: capture.rs  cli.rs  collision.wgsl  follow.rs  follow.wgsl  framepace.rs  gpu.rs  gravity.wgsl  gui.rs  main.rs  particle.rs  physics.rs  physics.wgsl  render.rs  render.wgsl  types.rs  utils.rs
