[package]
name = "particle_simulation"
version = "0.4.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck"] }
rand = "0.8"
tokio = { version = "1.37", features = ["full"] }

# CLI/Debug
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

# Window
winit = "0.30"
wgpu = "0.19"

# GUI
egui = { version = "0.27", features = ["bytemuck"] }
egui-wgpu = "0.27"
anyhow = "1.0.82"

[features]
default = ["capture"]
capture = []
